--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,11 @@ body {
   margin: 0;
   padding: 0;
   text-align: left;
+  font-weight: 400;
   position: relative;
+  font-family: 'Roboto', sans-serif;
+
+  background-color: #2a2a2a;
 }
 
 #root {
