--- a/src/lib/Edit/NavBar/CmsEditNavBar.css
+++ b/src/lib/Edit/NavBar/CmsEditNavBar.css
@@ -6,7 +6,7 @@
 .CmsEditNavBar {
     width: 100%;
     height: 80px;
-    padding: 25px 0;
+    padding: 0 25px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
