--- a/src/lib/CmsScreen.css
+++ b/src/lib/CmsScreen.css
@@ -1,102 +1,28 @@
-#CmsScreen {
+.CmsScreen {
     width: 100%;
+    height: 100%;
+    /*noinspection CssInvalidPropertyValue*/
+    height: -webkit-fill-available; /*fix ios mobile browser bug*/
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #101010;
-}
-
-#CmsScreenBodyOuter {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 25px;
-    padding-bottom: 40px;
-}
-
-#CmsScreenBody {
-    width: 90%;
-    max-width: 1000px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-grow: 1;
-}
-
-#CmsScreenBodyHeader {
-    margin-bottom: 20px;
-    color: #e8e8e8;
-}
-
-.CmsScreenSectionOuter {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
+    /*noinspection CssInvalidPropertyValue*/
+    min-height: -webkit-fill-available; /*fix ios mobile browser bug*/
+    -webkit-tap-highlight-color: transparent;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    font-weight: 400;
     position: relative;
-    margin-bottom: 15px;
+    font-family: 'Roboto', sans-serif;
 }
 
-.CmsScreenSection {
-    width: 100%;
-    flex: 1;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    border-radius: 5px;
-    padding: 15px;
-    background-color: rgb(42, 42, 42);
-    cursor: pointer;
-    text-decoration: none;
-    user-select: none;
-    color: #e0e0e0;
-    font-size: 24px;
-    letter-spacing: 2px;
+.CmsScreen > img {
+    vertical-align: middle;
+    border-style: none;
 }
 
-@media (hover: hover) {
-    .CmsScreenSection:hover {
-        background-color: rgb(31, 31, 31);
-    }
-}
-
-.CmsScreenDeleteSection {
-    position: absolute;
-    margin-top: auto;
-    margin-bottom: auto;
-    right: 15px;
-    top: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition: transform 1s;
-}
-
-
-@media (hover: hover) {
-    .CmsScreenDeleteSection:hover {
-        transform: scale(1.08);
-    }
-}
-
-.CmsScreenDeleteSectionIcon {
-    width: 20px;
-}
-
-.CmsScreenAddSection {
-    width: 100%;
-}
-
-.CmsScreenAddSectionPrompt {
-    margin-right: 10px;
-}
-
-.CmsScreenAddSectionIcon {
-    width: 20px;
-    filter: hue-rotate(150deg);
+*,
+*::before,
+*::after {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
